--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
-
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
 html,
 body {
-  height: 100%;
-  width: 100%;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  color: aliceblue;
   background: -webkit-linear-gradient(left, #ffd037, #ff8800);
+}
+#calendar{
+  width:80%;
+  height:180%;
 }
